--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-fontconfig (0.0.4) rote; urgency=low
+
+  * Use fontconfig-udeb instead of fontconfig for the udeb package
+
+ -- Mohammad Anwari <mdamt@di.blankon.in>  Thu, 01 Dec 2011 23:25:36 +0200
+
 blankon-fontconfig (0.0.3) rote; urgency=low
 
   * Added missing .install file 
