First upload to tambora

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-fontconfig (0.0.7) tambora; urgency=low
+
+  * First upload to tambora
+
+ -- Syai Mif <syai.unipdu@gmail.com>  Thu, 06 Mar 2014 11:34:51 +0700
+
 blankon-fontconfig (0.0.6) suroboyo; urgency=low
 
   * Chnages:
