--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blankon-fontconfig (0.0.10) verbeek; urgency=medium
+
+  * Upload to verbeek
+
+ -- Anto Samalona <ansamsoftdev@gmail.com>  Wed, 16 Dec 2020 14:36:43 +0800
+
 blankon-fontconfig (0.0.9) uluwatu; urgency=medium
 
   * Rebuild
